WanaLyzer/out/numpy/typing/tests/data/pass/comparisons.pyi
import numpy as np
from _typeshed import Incomplete
from typing import Any

c16: Incomplete
f8: Incomplete
i8: Incomplete
u8: Incomplete
c8: Incomplete
f4: Incomplete
i4: Incomplete
u4: Incomplete
dt: Incomplete
td: Incomplete
b_: Incomplete
b: Incomplete
c: Incomplete
f: Incomplete
i: Incomplete
SEQ: Incomplete
AR_b: np.ndarray[Any, np.dtype[np.bool_]]
AR_u: np.ndarray[Any, np.dtype[np.uint32]]
AR_i: np.ndarray[Any, np.dtype[np.int_]]
AR_f: np.ndarray[Any, np.dtype[np.float_]]
AR_c: np.ndarray[Any, np.dtype[np.complex_]]
AR_m: np.ndarray[Any, np.dtype[np.timedelta64]]
AR_M: np.ndarray[Any, np.dtype[np.datetime64]]
AR_O: np.ndarray[Any, np.dtype[np.object_]]
